--- a/.user.ini
+++ b/.user.ini
@@ -1,5 +1,5 @@
-memory_limit=256M
-upload_max_filesize=50M
-post_max_size=50M
-max_execution_time=300
-max_input_time=300
+memory_limit=512M
+upload_max_filesize=600M
+post_max_size=325M
+max_execution_time=0
+max_input_time=0
